Fix weird wrapping

--- a/app/assets/stylesheets/advanced_searches.sass
+++ b/app/assets/stylesheets/advanced_searches.sass
@@ -1,5 +1,8 @@
 @import 'common'
 
+#page_contents
+  width: 100%
+
 .search_section, .results_section
   margin: 6px
 
